--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'JV'
 - !lcsh 'United States -- Emigration and immigration'
 - !lcsh 'Aliens -- United States'
+- GITenberg
 title: Aliens or Americans?
 url: http://www.gutenberg.org/ebooks/19198
